# nba-dashboard

./: .gitignore  2019_mvp.py  2020_mvp.ipynb  Dockerfile  README.md  Untitled.ipynb  app.py  bubble_shooting.py  figure_styles.py  margin_of_victory.py  nba_data.py  nba_games.py  nba_methods.py  nba_player.py  nba_season.py  nba_team.py  player_games.py  pps.ipynb  pps.py  push_heroku_changes.sh  pyproject.toml  requirements.txt  season_dash.py
Projects (.ipynb)/: 2020_mvp.ipynb  bubble_playoff_h-a.ipynb  bubble_shooting.ipynb  dash_nba.py  dashboard_reference.py  margin_of_victory.ipynb  season_dash.py
nba_dashboard/: app.py  dash_nba.py  figs_for_app.py  nba_data.py  requirements.txt  table_styles.py
